--- a/sprint_03/mazor86_sprint_03.ipynb
+++ b/sprint_03/mazor86_sprint_03.ipynb
@@ -30,6 +30,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 803,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from pymystem3 import Mystem\n",
+    "from collections import Counter"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 760,
    "metadata": {},
    "outputs": [
@@ -66,8 +83,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "try:\n",
     "    data = pd.read_csv('/datasets/data.csv')\n",
     "except FileNotFoundError:\n",
@@ -979,9 +994,47 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Внимательно изучив указанные цели, мы можем заметить, что цели кредита объединяются в более крупные подгруппы. На мой взгляд логично выделить следующие:\n",
+    "На первый взгляд очевидно, что цели кредита, например \"на покупку автомобиля\" и \"свой автомобиль\" можно объединить в более крупные подгруппы.\n",
+    "Посчитаем, применив лемматизацию, какие слова в стобце `purpose` встречаются чаще всего"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 802,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({' ': 96, 'покупка': 10, 'недвижимость': 10, 'автомобиль': 9, 'образование': 9, 'жилье': 7, 'с': 5, 'операция': 4, 'на': 4, 'свой': 4, 'свадьба': 3, 'строительство': 3, 'получение': 3, 'высокий': 3, 'дополнительный': 2, 'для': 2, 'коммерческий': 2, 'жилой': 2, 'подержать': 2, 'заниматься': 2, 'сделка': 2, 'приобретение': 1, 'сыграть': 1, 'проведение': 1, 'семья': 1, 'собственный': 1, 'со': 1, 'профильный': 1, 'сдача': 1, 'ремонт': 1, '\\n': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_purposes = ' '.join(unique_purpose)\n",
+    "m = Mystem()\n",
+    "lemmas = m.lemmatize(all_purposes)\n",
+    "print(Counter(lemmas))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Изучив частоту встречающихся слов,  логично выделить следующие подгруппы:\n",
     "- свадьба\n",
-    "- недвижимость / жилье\n",
+    "- ипотека (\"недвижимость\" / \"жилье\")\n",
     "- образование\n",
     "- автомобиль\n",
     "\n",
@@ -1011,10 +1064,6 @@
    "execution_count": 781,
    "outputs": [],
    "source": [
-    "from pymystem3 import Mystem\n",
-    "\n",
-    "m = Mystem()\n",
-    "\n",
     "def get_purpose_group(purpose: str) -> str:\n",
     "    lemma_purpose = m.lemmatize(purpose)\n",
     "    if 'свадьба' in lemma_purpose:\n",
