remove reviewer comments on sprint_02

--- a/sprint_02/mazor86_sprint_02.ipynb
+++ b/sprint_02/mazor86_sprint_02.ipynb
@@ -2,42 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "Привет! Меня зовут Сысоева Вера.\n",
-    "    \n",
-    "Далее в файле мои комментарии ты сможешь найти в ячейках, аналогичных данной ( если рамки комментария зелёные и отмечены **#ок** - всё сделано правильно; жёлтые и отмечены **#можно лучше** - есть замечания, но не критично; красные с пометкой **#ошибка** - нужно переделать). Не удаляй эти комментарии и постарайся учесть их в ходе выполнения проекта.\n",
-    "    \n",
-    "Я буду поддерживать версионность комментариев, и при следующих итерациях комментарии будут выделены, как \"Комментраии ревьюера - 2 (3 и.т.д.)\"\n",
-    "    \n",
-    "Если у тебя есть замечания, возражения и вопросы, ты можешь писать свои комментарии, по возможности выделяй их так же цветом (например, синим), чтоб их можно было легко отделить от текста проекта. \n",
-    "    \n",
-    "Кстати, предлагаю сразу общаться на \"ты\".\n",
-    "    \n",
-    "Увидев у тебя ошибку, в первый раз я лишь укажу на ее наличие и дам тебе возможность самой найти и исправить ее. На реальной работе твой начальник будет поступать так же, а я пытаюсь подготовить тебя именно к работе аналитиком. Но если ты пока не справишься с такой задачей - при следующей проверке я дам более точную подсказку.\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid yellow 3px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий проверяемого**\n",
-    "    \n",
-    "Привет. Меня зовут Корниенко Роман. Спасибо за ревью. Все недочеты учёл и поправил, ошибку пофиксил\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "E0vqbgi9ay0H"
    },
@@ -131,30 +95,6 @@
     "    df = pd.read_csv('yandex_music_project.csv')\n",
     "except:\n",
     "    df = pd.read_csv('/datasets/yandex_music_project.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отлично, все верно подгружено. \n",
-    "    \n",
-    "Также при работе с проектами тебе может понадобится работать на своей машине локально. Но в итоге сдать его можно только с сервера. Чтобы данные подгружались и локально и глобально можно использовать конструкцию try-except\n",
-    "    \n",
-    "    try:\n",
-    "        df = pd.read_csv('C:/Users/datasets/yandex_music_project.csv')  # Локальный путь\n",
-    "    except:\n",
-    "        df = pd.read_csv('/datasets/yandex_music_project.csv')  # Серверный путь\n",
-    "    \n",
-    "Т.е. программа пытается подгрузить файл локально, и если не удается, то подгружает с сервера\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -425,23 +365,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отличное начало. Все проблемы в данных верно обнаружены. \n",
-    "    \n",
-    "diaplay - правильный вариант для вывода таблиц, но в данном случае его можно не использовать, последняя строка в ячейке выводится автоматически. Просто df.head(10) и в переменную лучше не класть\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "MCB6-dXG_Zct"
    },
@@ -566,23 +489,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "С названиями справились.\n",
-    "\n",
-    "Опять же display лишний\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "5ISfbcfY_Zct"
    },
@@ -700,24 +606,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Хорошо, пропуски верно обработаны, правильно использован цикл.\n",
-    "\n",
-    "Повторюсь, не нужно делать отдельный датасэт для вывода таблицы на экран. Можно просто написать df.isna().sum() и все автоматически выведится.\n",
-    "    \n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "BWKRtBJ3_Zct"
    },
@@ -768,15 +656,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Im2YwBEG_Zct"
-   },
-   "source": [
-    "Ещё раз посчитайте явные дубликаты в таблице — убедитесь, что полностью от них избавились:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -794,23 +673,6 @@
    "source": [
     "# проверка на отсутствие дубликатов\n",
     "print(f'Количество явных дубликатов: {df.duplicated().sum()}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Ок, все верно, молодец. Классно разобрались с дубликатами, но стоит подписывать выводимые значения не комментариями в коде, а непосредственно при выводе. Например,\n",
-    "    \n",
-    "\"Количество явных дубликатов: 3826\"\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -926,21 +788,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера - 2**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отлично, так список читабельнее получился\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "qej-Qmuo_Zct"
    },
@@ -971,22 +818,6 @@
     "def replace_wrong_genres(wrong_genres, correct_genre):\n",
     "    for genre in wrong_genres:\n",
     "        df['genre'] = df['genre'].replace(genre, correct_genre)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "    \n",
-    "**#ок**\n",
-    "\n",
-    "Функция написана верно\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -1121,21 +952,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Ок, жанры поправили. Если посмотреть есть еще ошибки, но это уже сверх задания\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "WttZHXH0SqKk"
    },
@@ -1204,21 +1020,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Хорошо, здесь groupby верно использован\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "dzli3w8o_Zcu"
    },
@@ -1254,36 +1055,6 @@
     "# Подсчёт прослушиваний в каждый из трёх дней\n",
     "\n",
     "df.groupby('day')['track'].count()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid red 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ошибка**\n",
-    "\n",
-    "Это не совсем то, что имелось ввиду в задании. Здесь надо было сделать группировку по дням недели и получить одну таблицу с количеством прослушиваний в определенные дни. Дополни, пожалуйста\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера - 2**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Да, теперь все верно\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -1375,22 +1146,6 @@
     "# количество прослушиваний в Москве по понедельникам\n",
     "moscow_monday = number_tracks('Monday', 'Moscow')\n",
     "print(f'Количество прослушиваний в Москве по понедельникам: {moscow_monday}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Здесь тоже аналогично надо бы сделать подписи типа \"Количество прослушиваний в Москве в понедельник: 15740\"\n",
-    "\n",
-    "А так все верно рассчитано, молодец\n",
-    "</div>"
    ]
   },
   {
@@ -1579,20 +1334,6 @@
     "number_tracks_data = pd.DataFrame(columns=['city', 'monday', 'wednesday', 'friday'],\n",
     "                                  data=[moscow_data, petersburg_data])\n",
     "display(number_tracks_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отлично правильно сделана таблица. Молодец, что делаешь расчет, а не вводишь числа руками\n",
-    "</div>"
    ]
   },
   {
@@ -1895,20 +1636,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "С помощью функции мы получили всю нужную информацию! Все верно\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "wrCe4MNX_Zcu"
    },
@@ -2113,20 +1840,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отлично, в этой части тоже все верно\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "ykKQ0N65_Zcv"
    },
@@ -2137,7 +1850,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "tjUwbHb3_Zcv"
+    "id": "tjUwbHb3_Zcv",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Вы проверили три гипотезы и установили:\n",
@@ -2161,44 +1877,6 @@
     "Проверки статистических гипотез покажут, насколько они достоверны, исходя из имеющихся данных. \n",
     "С методами проверок гипотез вы ещё познакомитесь в следующих темах."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Общий комментарий по проекту**\n",
-    "\n",
-    "Ты отлично поработал над проектом, на все задания даны правильные решения. \n",
-    "    \n",
-    "Ты хорошо идешь по программе и уже освоил много полезных методов. Все пробелы в python-е, если они были, закрыты. Дальше все будет интереснее и сложнее. \n",
-    "    \n",
-    "Поправь, пожалуйста одно задание, чтобы я могла принять проект. Удачи.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера - 2**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Проект отлично доработан, молодец, что проработал не только критические замечания.\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
